--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "prepare": "asc --baseDir assembly -O3 -b index.wasm -t index.wat index.ts --validate --sourceMap"
+    "build": "asc --baseDir assembly -O3 -b index.wasm -t index.wat index.ts --validate --sourceMap"
   },
   "devDependencies": {
     "@types/node": "^10.7.1",
